# African-universities-quantitative-ecology

./: .gitignore  README.md  all_african_universities.ipynb  data_Nominatim.parquet  data_universities.parquet  environmental_ecology_programs.ipynb  pyproject.toml  qantitative_statistical_ecology_programs.ipynb  scripts.py  unies_all.ipynb  unies_e.ipynb  unies_ee.ipynb
notebooks/: all_african_universities.ipynb  environmental_ecology_programs.ipynb  qantitative_statistical_ecology_programs.ipynb
scripts/: scripts.py
